--- a/testruns/index1.html
+++ b/testruns/index1.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gladys Lacia</title>
 
+  <!-- Favicon Added -->
+  <link rel="icon" type="image/png" href="https://gladyslacia.github.io/assets/favicongdlcgithubio.png" />
+
   <style>
     :root {
       --primary: #024570;
